--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Welcome to my personal website. I'm passionate about programming. Feel free to explore more about me and my work!</p>
+            <p>Hello Everyone.I am Dipesh Adhikai and I am currently pursuing my +2 as major in computer science. .Welcome to my personal website. I'm passionate about programming. Feel free to explore more about me and my work!</p>
         </div>
     </section>
 
