--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2024 Dipesh Adhikari. All rights reserved.</p>
+            <p>Copyright © 2024 All rights reserved.</p>
         </div>
     </footer>
 
